--- a/app/src/main/res/layout/exame.xml
+++ b/app/src/main/res/layout/exame.xml
@@ -48,7 +48,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_exame"
-        app:layout_constraintTop_toBottomOf="@+id/tv_exame" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_exame"
+        android:layout_marginRight="8dp" />
 
 
 
